--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "node-simple-http2": "git+https://github.com/jinjor/node-simple-http2.git#master",
+    "ecstatic": "^0.6.0",
     "htmlparser2": "^3.8.2",
-    "request": "^2.53.0"
+    "object-assign": "^2.0.0",
+    "request": "^2.53.0",
+    "through2": "^0.6.3"
   },
-  "bin":  "./bin/auto-push",
+  "bin": "./bin/auto-push",
   "repository": {
     "type": "git",
     "url": "https://github.com/jinjor/auto-push.git"
