--- a/sample/package.json
+++ b/sample/package.json
@@ -9,8 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "compression": "^1.4.0",
-    "express": "^4.11.2"
+    "bunyan": "^1.3.4",
+    "express": "^4.11.2",
+    "http2": "^3.2.0"
   },
   "devDependencies": {}
 }
