fixed some logic

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "htmlparser2": "^3.8.2",
     "object-assign": "^2.0.0",
     "request": "^2.53.0",
+    "serve-static": "^1.9.1",
     "through2": "^0.6.3"
   },
   "bin": "./bin/auto-push",
