--- a/sample/package.json
+++ b/sample/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "bunyan": "^1.3.4",
+    "ecstatic": "^0.6.0",
     "express": "^4.11.2",
     "http2": "^3.2.0"
   },
