--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "auto-push",
   "version": "1.0.0",
-  "description": "Experimental HTTP/2 (proxy) server that automatically pushes sub-resources of HTML",
+  "description": "Experimental HTTP/2 middleware that automatically pushes sub-resources of HTML",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,12 +9,11 @@
   "dependencies": {
     "ecstatic": "^0.6.0",
     "htmlparser2": "^3.8.2",
+    "http2": "^3.2.0",
     "object-assign": "^2.0.0",
     "request": "^2.53.0",
-    "serve-static": "^1.9.1",
     "through2": "^0.6.3"
   },
-  "bin": "./bin/auto-push",
   "repository": {
     "type": "git",
     "url": "https://github.com/jinjor/auto-push.git"
