--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "A HTTP/2 middleware that automatically pushes sub-resources of HTML",
   "main": "index.js",
   "scripts": {
-    "test": "mocha -t 2000",
-    "prepublish": "npm test"
+    "test": "istanbul cover ./node_modules/mocha/bin/_mocha test/",
+    "prepublish": "npm test",
+    "coveralls": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
   },
   "dependencies": {
     "ecstatic": "^0.7.0",
@@ -26,6 +27,8 @@
   },
   "homepage": "https://github.com/jinjor/auto-push",
   "devDependencies": {
+    "coveralls": "^2.11.2",
+    "istanbul": "^0.3.11",
     "mocha": "^2.1.0",
     "should": "^5.0.1"
   }
