--- a/sample/package.json
+++ b/sample/package.json
@@ -13,7 +13,8 @@
     "ecstatic": "^0.7.0",
     "express": "^4.11.2",
     "http2": "^3.2.0",
-    "request": "^2.53.0"
+    "request": "^2.53.0",
+    "st": "^0.5.3"
   },
   "devDependencies": {}
 }
