add tests for nghttpx

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "http2": "^3.2.0",
     "istanbul": "^0.3.11",
     "mocha": "^2.1.0",
+    "request": "^2.55.0",
     "should": "^5.0.1"
   }
 }
